# pico_sdk_dev

./: README.md  bootstrap.sh  create_project.sh
example/: CMakeLists.txt  light_sw.c
example/3d_/: 2_box_swLight.FCStd
